# repo-proof

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  SPEC.md  conftest.py  install-codex.ps1  install-codex.sh  install-gemini.ps1  install-gemini.sh  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
docs/: benchmark.md
fixtures/go-broken/: README.md  go.mod  main.go
fixtures/go-working/: README.md  go.mod  main.go
fixtures/node-broken/: README.md  index.js  package.json
fixtures/node-working/: README.md  index.js  package.json
fixtures/py-broken/: README.md  main.py
fixtures/py-working/: README.md  main.py
fixtures/ruby-broken/: README.md  main.rb
fixtures/ruby-working/: README.md  main.rb
fixtures/rust-broken/: Cargo.toml  README.md
fixtures/rust-working/: Cargo.toml  README.md
fixtures/web-demo/: README.md  index.html
proof/: SKILL.md  __init__.py
proof/references/: languages.md  sandbox.md
proof/scripts/: classify.py  cli.py  demo_cli.py  detect.py  extract.py  models.py  report.py  sandbox.py  services.py  verify.py
skills/proof-demo/: SKILL.md
tests/: test_classify.py  test_cli.py  test_demo.py  test_detect.py  test_dogfood.py  test_extract.py  test_models.py  test_packaging.py  test_report.py  test_sandbox.py  test_services.py  test_verify.py
tools/: benchmark.py  gen_demo.py
(+7 files in other folders)
